--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -109,6 +109,19 @@
   opacity: .8;
 }
 
+.profile__info-text {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  color: red;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 16px;
+}
+
 .profile__button {
   justify-self: center;
   align-self: center;
@@ -117,6 +130,11 @@
   color: black;
   margin: 270px auto 0 auto;
   cursor: pointer;
+}
+
+.profile__button_disable {
+  opacity: 0.3;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 470px) {
